# mpibind

./: .gitignore  Makefile.am  README.md  bootstrap  configure.ac
affinity/: Makefile.mk  README.md  affinity.h  cpu.c  gpu.cu  makefile.mk  mpi+omp.c  mpi.c  omp.c  orig.mk
aux/: deepclean.sh  load_env.sh
bindings/: Makefile.am  README.md
bindings/python/: Makefile.am  README.md  setup.py
bindings/python/_mpibind/: Makefile.am  build.py  clean_header.py  make_clean_header.py
bindings/python/mpibind/: Makefile.am  example.py  jobspec.py  mpibind_wrapper.py  wrapper.py
cmd/: example.py  flux-mpibind.py
config/: am_check_pymod.m4  ax_python_devel.m4  tap-driver.py
doc/: README.md  mpibind.bib
etc/: Makefile.am  mpibind.pc.in
flux/: Makefile  Makefile.am  README.md  initrc.lua  mpibind-flux-ex1.lua  mpibind-flux-ex2.lua  mpibind-flux.lua.in  mpibind.c  mpibind.lua  mpibind_plugin.c  options.md  plugin.c
flux/examples/: README.md  hip_detect.cpp  manual.mk  omp_hello.c  opencl_detection.cpp
gpu-tests/: makefile.mk  retrieve.cu  simple.cpp  visdevs-hwloc.cu  visdevs.cu
hello/: README.md
python/: Makefile.am  README.md  mpibind.py.in  mpibind_example.py  mpibind_map.py  setup.py  test-mpi.py  test-simple.py
python_bindings/: setup.py
python_bindings/cffi_build/: _mpibind.h  mpibind_build.py
python_bindings/cffi_build/cffi_build/: _mpibind_cffi.c
python_bindings/mpibind/: mpibind.py
slurm/: Makefile.am  README.md  plugin.c
src/: Makefile  Makefile.am  dev_tests.c  hwloc_tests.c  hwloc_utils.c  hwloc_utils.h  internals.c  main.c  manual.mk  mpibind-priv.h  mpibind.c  mpibind.h  simple.mk  utils.c
test-suite/: Makefile.am  README.md  coral-lassen.c  environment.c  error.c  tap-driver-new.py  tap-driver.py  test_utils.c  test_utils.h
test-suite/expected/: expected.coral-ea  expected.coral-lassen  expected.cts1-quartz  expected.epyc-corona
test-suite/python/: py-coral-ea.py  py-coral-lassen.py  py-cts1-quartz.py  py-epyc-corona.py  test_utils.py  wrapper.py
tests/: Makefile.am  README.md  coral-ea.c  cts1-quartz.c  epyc-corona.c  error.c  test_utils.c
tests/expected/: expected.coral-ea  expected.coral-lassen  expected.coral-rzansel  expected.cts1-quartz  expected.epyc-corona
topo-xml/: arm64-ulna-hwloc1.xml  cascade-lake-ap-snl-hwloc1.xml  coral-butte-hwloc1.xml  coral-ea-hwloc1.xml  coral-lassen-hwloc1.xml  coral-lassen.xml  coral-rzansel-hwloc1.xml  cts1-pascal.xml  cts1-quartz-smt1.xml  epyc-corona-hwloc1.xml  epyc-corona-p2.xml  epyc-corona.xml  epyc-dual-sock-hwloc1.xml  g4dnmetal.xml  hpe-tioga.xml  knl-quad-cache-hwloc1.xml  knl-quad-flat-hwloc1.xml  knl-snc4-cache-hwloc1.xml  knl-snc4-flat-hwloc1.xml
tutorials/: README.md  carla25
tutorials/carla25/: README.md
tutorials/common/: archs.md
tutorials/cug23/: README.md  module1.md  module2.md  module3.md
tutorials/cug24/: README.md  archs.md  module1.md  module2.md  module3.md  module4.md
tutorials/eurosys25/: README.md  module1.md  module2.md  module3.md
tutorials/flux/: README.md  module1.md  module2.md
tutorials/gmis25/: README.md  module2.md
tutorials/isc23/: README.md  module1.md  module3.md  module4.md  module5.md
tutorials/isc24/: README.md
tutorials/lanl22/: README.md
tutorials/llnl/: README.md
tutorials/main/: README.md  module2.md
tutorials/sca26/: README.md
tutorials/tapia22/: README.md  tapia-setup-instructions.md
